--- a/front/index.html
+++ b/front/index.html
@@ -13,6 +13,7 @@
   <div ng-view></div>
 
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>  
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
