--- a/front/index.html
+++ b/front/index.html
@@ -12,6 +12,8 @@
 
   <div ng-view></div>
 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>  
   <script src="bower_components/angular-route/angular-route.js"></script>
