--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="dvrClient">
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+  <title>DVR Client</title>
   <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="css/app.css">
